--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "classnames": "^2.3.2",
+    "css-loader": "^6.7.3",
+    "postcss-loader": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "style-loader": "^3.3.2"
   },
   "devDependencies": {
     "@rspack/cli": "latest",
