--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postcss-loader": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "style-loader": "^3.3.2"
   },
